--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-selenium>=4.0.0
 beautifulsoup4>=4.9.3
-pandas>=1.3.0
 openpyxl>=3.0.0
-cloudscraper
-beautifulsoup4
+cloudscraper>=1.2.60
+schedule>=1.1.0
+flask>=2.0.0
+flask-cors>=3.0.10
